--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "@stripe/stripe-js": "^7.3.0",
     "@supabase/supabase-js": "^2.57.0",
     "@tanstack/react-query": "^5.60.5",
+    "@types/archiver": "^6.0.3",
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.8",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/memoizee": "^0.4.12",
+    "archiver": "^7.0.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
